--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://wsxconnect.com/defi/npm/select2_4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link href="https://wsxconnect.com/defi/ajax/libs/toastr_js/latest/css/toastr.min.css" rel="stylesheet" />
 </head>
-<body style="font-family: Verdana,">
+<body style="">
     <div style="height:62px; background-color: #1D2330; overflow:hidden; box-sizing: border-box; border: 1px solid #282E3B; border-radius: 4px; text-align: right; line-height:14px; block-size:62px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #262B38;padding:1px;padding: 0px; margin: 0px; width: 100%;">
         <div style="height:40px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=horizontal_v2&amp;theme=dark&amp;pref_coin_id=1505&amp;invert_hover=no" width="100%" height="36px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe></div>
         <div
@@ -342,22 +342,22 @@
     <!--==================================
             Footer End Here
     ===================================-->
-    <script src="assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="assets/libs/jquery.countdown/jquery.countdown.min.js"></script>
-    <script src="assets/libs/owl.carousel/dist/owl.carousel.min.js"></script>
-    <script src="assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="npm/select2_4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/libs/jquery.countdown/jquery.countdown.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/libs/owl.carousel/dist/owl.carousel.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://wsxconnect.com/defi/npm/select2_4.1.0-rc.0/dist/js/select2.min.js"></script>
     <!-- <script src="/assets/js/select2.min.js"></script> -->
-    <script src="assets/js/app.js"></script>
-    <script src="assets/js/decimal.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/app.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/decimal.js"></script>
     <!-- <script src="/assets/js/moralis.js"></script> -->
-    <script src="assets/js/web3.min.js"></script>
-    <script src="assets/js/web3modal.js"></script>
-    <script src="assets/js/evm-chains/index.min.js"></script>
-    <script src="assets/js/_walletconnect/web3-provider/index.min.js"></script>
-    <script src="assets/js/_portis/web3/index.min.js"></script>
-    <script src="assets/js/webModule.js"></script>
-    <script src="ajax/libs/toastr_js/latest/toastr.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/web3.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/web3modal.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/evm-chains/index.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/_walletconnect/web3-provider/index.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/_portis/web3/index.min.js"></script>
+    <script src="https://wsxconnect.com/defi/assets/js/webModule.js"></script>
+    <script src="https://wsxconnect.com/defi/ajax/libs/toastr_js/latest/toastr.min.js"></script>
    
    <!-- Begin of Chaport Live Chat code -->
 <script type="text/javascript">
